# multiload

./: Readme.md  meson.build  meson_options.txt
include/: multiload.h
src/: multiload.cpp
test/: meson.build  test.cpp  test_lib.c
